--- a/component/index.html
+++ b/component/index.html
@@ -11,7 +11,7 @@
       <section>
         <h1>
           <span class="flex">
-            <span><center>Address: #777, Recihstage, Berlin, Germany</center></span>
+            <span><center>Address: #777,Eastern Bloc, Recihstage, Berlin, Germany</center></span>
             <span><center>Invoice Sample</center></span>
           </span>
         </h1>
